dossier-docs/src/adoc/user-guide/7.2/chapters/_02_identification.adoc
[[_02_identification]]
== Identification, Autorisations
=== Page de Connexion

.Page de connexion
image:02_identification/image7.png[width=537,height=236]

La page de *Connexion* permet à un utilisateur de se connecter à {dossier}. Seules les personnes habilitées doivent pouvoir accéder aux
données exploitées par le serveur `AIRS`.
Pour ce faire, l'utilisateur doit renseigner son *Identifiant* et son *Mot de passe*.

Lors de la connexion, après vérification des critères de connexion et acceptation de ceux-ci, le profil de l’utilisateur est chargé.
Celui-ci dispose alors des droits et accréditations qui lui ont été attribués par l’administrateur du système.
Si les informations de connexion permettent d’authentifier l’utilisateur et qu'il possède les droits suffisants pour
accéder à l'application, la page d’*Accueil* est affichée (cf. Page d'Accueil page 46).

Si les paramètres de connexion de l’utilisateur sont invalides, le message *Erreur d’authentification. Identifiant ou Mot de passe
invalide* vous en averti.

[NOTE]
====
En cochant *Se souvenir de moi*, l'*Identifiant* de l'utilisateur sera
mémorisé pour les connexions futures.
====

[NOTE]
====
Dans le cas où le *Mot de passe* est expiré, l'utilisateur doit au
préalable saisir un nouveau *Mot de passe* avant de pouvoir accéder à la page d'*Accueil*.
====

=== Déconnexion

Une fois connecté à {dossier}, l'utilisateur peut se déconnecter à tout moment en cliquant sur le lien *Déconnexion*.
Une fois l'utilisateur déconnecté, la page de *Connexion* est affichée.

.Lien de déconnexion
image:02_identification/image9.png[width=680,height=92]

<<<